--- a/public/package.json
+++ b/public/package.json
@@ -13,6 +13,8 @@
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-dist": "^1.12.1",
+    "moment": "^2.22.1",
+    "moment-timezone": "^0.5.16",
     "underscore": "^1.8.3"
   }
 }
